# soat-traffic-extractor-cidti

./: .editorconfig  .gitignore  README.md  database.db  main.py  pyproject.toml  requirements.txt
api/: containers.py  daos.py  data.py  database.py  error_handlers.py  main.py  routes.py  schemas.py
api/context/procedures/domain/: __init__.py  procedure.py  procedure_repository.py
api/context/procedures/domain/objects/: __init__.py  code.py
api/context/procedures/infrastructure/: __init__.py  procedure_container.py
api/context/procedures/infrastructure/http/: __init__.py  procedure_dto.py  procedure_endpoints.py  procedure_get_controller.py
api/context/shared/domain/: dao.py
api/context/surgical_groups/domain/: __init__.py  surgical_group.py  surgical_group_repository.py
api/context/surgical_groups/infrastructure/: __init__.py  surgical_group_container.py
api/controllers/: procedure.py  surgical_group.py
api/core/persistence/: expression.py
app/: database.py  exporter.py  extractor.py  factories.py  interfaces.py  parser.py  utils.py
app/services/: __init__.py  anesthesiologist.py  assistant.py  cost_aggregator.py  material.py  operating_room.py  pre_consultation.py  procedure.py  service.py  surgeon.py  surgical_professional.py
notebooks/: extract_cap3.ipynb
tests/: test_anesthesiologist_service.py  test_assistant_service.py  test_cost_aggregator_service.py  test_factories.py  test_material_service.py  test_operating_room_service.py  test_pre_consulting_service.py  test_procedure_service.py  test_surgeon_service.py
(+14 files in other folders)
