[project]
name = "soat-traffic-extractor-cidti"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.116.1",
    "pandas>=2.3.1",
    "pdfplumber>=0.11.7",
]

[dependency-groups]
lint = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "ruff>=0.12.8",
]
notebook = [
    "notebook>=7.4.5",
]
test = [
    "pytest>=8.4.1",
]

[tool.isort]
line-length = 90

[tool.black]
line-length = 90
target-version = ['py312']
skip-string-normalization = true

[tool.ruff]
line-length = 90
indent-width = 2
target-version = 'py312'

[tool.ruff.lint]
select = ['E4', 'E7', 'E9', 'F', 'Q', 'I', 'C90', 'D', 'B', 'PL', 'SIM']
ignore = ['D100', 'D104', 'D300']

[tool.ruff.isort]
lines-after-imports = 2
known-local-folder = ['app']

[tool.ruff.mccabe]
max-complexity = 15

[tool.ruff.pydocstyle]
convention = 'google'

[tool.ruff.pycodestyle]
max-doc-length = 88
